--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
 <option value="Low">Low</option>
 </select><br>
 <br>
-<input type="submit" name="submit">
+<input style="margin-top:20px" type="submit" name="submit">
 
 </form>
