--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--  <input type="hidden" name="debugEmail"                                  -->
 <!--  value="kushtarbekovna777@gmail.com">                                    -->
 <!--  ----------------------------------------------------------------------  -->
-
+<div style="margin: 100px 0 0 50px">
 <label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /><br>
 <br>
 <label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
@@ -39,5 +39,5 @@
 </select><br>
 <br>
 <input style="margin-top:20px" type="submit" name="submit">
-
+<div>
 </form>
