--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 <!--  value="kushtarbekovna777@gmail.com">                                    -->
 <!--  ----------------------------------------------------------------------  -->
 <div style="margin-top:100px;">
-<label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /><br>
+<label style="margin-right:15px" for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /><br>
 <br>
-<label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
+<label style="margin-right:15px" for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
 <br>
-<label for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
+<label style="margin-right:15px" for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
 <br>
-<label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
+<label style="margin-right:15px" for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
 <br>
-<label for="description">Description</label><textarea name="description"></textarea><br>
+<label style="margin-right:15px" for="description">Description</label><textarea name="description"></textarea><br>
 <br>
-<label for="priority">Priority</label><select  id="priority" name="priority"><option value="">--None--</option><option value="High">High</option>
+<label style="margin-right:15px" for="priority">Priority</label><select  id="priority" name="priority"><option value="">--None--</option><option value="High">High</option>
 <option value="Medium">Medium</option>
 <option value="Low">Low</option>
 </select><br>
