--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
-
+<div style="background-color: lightblue;">
 <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00D8d00000ArT8z" method="POST">
 
 <input type=hidden name="orgid" value="00D8d00000ArT8z">
@@ -41,3 +41,4 @@
 <input style="margin-top:20px" type="submit" name="submit">
 <div>
 </form>
+<div>
