--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
-<div style="background-color: lightblue;">
+<div style="background-color: lightblue;
+  height:"100vh">
 <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00D8d00000ArT8z" method="POST">
 
 <input type=hidden name="orgid" value="00D8d00000ArT8z">
