--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
 <div style="background-color: lightblue;
-  padding: 50px;">
+  padding: 50px 0 70px 0;">
 <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00D8d00000ArT8z" method="POST">
 
 <input type=hidden name="orgid" value="00D8d00000ArT8z">
