--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 <option value="Low">Low</option>
 </select><br>
 <br>
-<input style="margin-top:20px" type="submit" name="submit">
+<input style="margin-top:20px;
+  border-radius:10px;
+  border: 2px solid yellow;
+  padding 5px" type="submit" name="submit">
 <div>
 </form>
 <div>
