--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <input style="margin-top:20px;
   border-radius:10px;
   border: 2px solid yellow;
-  padding 5px" type="submit" name="submit">
+  padding: 5px" type="submit" name="submit">
 <div>
 </form>
 <div>
