--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!--  value="kushtarbekovna777@gmail.com">                                    -->
 <!--  ----------------------------------------------------------------------  -->
 <div style="margin-top:100px;">
-<label style="margin-right:15px;" for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /><br>
+<label style="margin-right:15px;" for="name">Contact Name</label><input style="border-radius:10px; border: 2px solid yellow;"  id="name" maxlength="80" name="name" size="20" type="text" /><br>
 <br>
 <label style="margin-right:15px;" for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
 <br>
@@ -42,7 +42,7 @@
 <input style="margin-top:20px;
   border-radius:10px;
   border: 2px solid yellow;
-  padding: 5px" type="submit" name="submit">
+  padding: 10px" type="submit" name="submit">
 <div>
 </form>
 <div>
