--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 <div style="margin-top:100px;">
 <label style="margin-right:15px;" for="name">Contact Name</label><input style="border-radius:10px; border: 2px solid yellow;"  id="name" maxlength="80" name="name" size="20" type="text" /><br>
 <br>
-<label style="margin-right:15px;" for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /><br>
+<label style="margin-right:15px;" for="email">Email</label><input style="border-radius:10px; border: 2px solid yellow;"  id="email" maxlength="80" name="email" size="20" type="text" /><br>
 <br>
-<label style="margin-right:15px;" for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
+<label style="margin-right:15px;" for="phone">Phone</label><input style="border-radius:10px; border: 2px solid yellow;" id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
 <br>
-<label style="margin-right:15px;" for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
+<label style="margin-right:15px;" for="subject">Subject</label><input style="border-radius:10px; border: 2px solid yellow;" id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
 <br>
-<label style="margin-right:15px;" for="description">Description</label><textarea name="description"></textarea><br>
+<label style="margin-right:15px;" for="description">Description</label><textarea style="border-radius:10px; border: 2px solid yellow;" name="description"></textarea><br>
 <br>
-<label style="margin-right:15px;" for="priority">Priority</label><select  id="priority" name="priority"><option value="">--None--</option><option value="High">High</option>
+<label style="margin-right:15px;" for="priority">Priority</label><select style="border-radius:10px; border: 2px solid yellow;"  id="priority" name="priority"><option value="">--None--</option><option value="High">High</option>
 <option value="Medium">Medium</option>
 <option value="Low">Low</option>
 </select><br>
