--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
-<div style="background-color: lightblue;
+<div style="background-color: lighpink;
   padding: 50px">
 <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00D8d00000ArT8z" method="POST">
 
@@ -34,7 +34,7 @@
 <br>
 <label style="margin-right:15px;" for="description">Description</label><textarea style="border-radius:10px; border: 2px solid yellow;" name="description"></textarea><br>
 <br>
-<label style="margin-right:15px;" for="priority">Priority</label><select style="border-radius:10px; border: 2px solid yellow;"  id="priority" name="priority"><option value="">--None--</option><option value="High">High</option>
+<label style="margin-right:15px;" for="priority">Priority</label><select style="border-radius:10px; border: 2px solid yellow; padding: 10px;"  id="priority" name="priority"><option value="">--None--</option><option value="High">High</option>
 <option value="Medium">Medium</option>
 <option value="Low">Low</option>
 </select><br>
