--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--  ----------------------------------------------------------------------  -->
 <!--  NOTE: Please add the following <FORM> element to your page.             -->
 <!--  ----------------------------------------------------------------------  -->
-<div style="background-color: babypink;
+<div style="background-color: lightblue;
   padding: 50px">
 <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8&orgId=00D8d00000ArT8z" method="POST">
 
