--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <!--  value="kushtarbekovna777@gmail.com">                                    -->
 <!--  ----------------------------------------------------------------------  -->
 <div style="margin-top:100px;">
-<label style="margin-right:15px;" for="name">Contact Name</label><input style="border-radius:10px; border: 2px solid yellow;"  id="name" maxlength="80" name="name" size="20" type="text" /><br>
+<label style="margin-right:15px;" for="name">Contact Name</label><div><input style="border-radius:10px; border: 2px solid yellow;"  id="name" maxlength="80" name="name" size="20" type="text" /><div><br>
 <br>
-<label style="margin-right:15px;" for="email">Email</label><input style="border-radius:10px; border: 2px solid yellow;"  id="email" maxlength="80" name="email" size="20" type="text" /><br>
+<label style="margin-right:15px;" for="email">Email</label><div><input style="border-radius:10px; border: 2px solid yellow;"  id="email" maxlength="80" name="email" size="20" type="text" /><div><br>
 <br>
 <label style="margin-right:15px;" for="phone">Phone</label><input style="border-radius:10px; border: 2px solid yellow;" id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
 <br>
