--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 <br>
 <label style="margin-right:15px;" for="email">Email</label><div><input style="border-radius:10px; border: 2px solid yellow;"  id="email" maxlength="80" name="email" size="20" type="text" /><div><br>
 <br>
-<label style="margin-right:15px;" for="phone">Phone</label><input style="border-radius:10px; border: 2px solid yellow;" id="phone" maxlength="40" name="phone" size="20" type="text" /><br>
+<label style="margin-right:15px;" for="phone">Phone</label><div><input style="border-radius:10px; border: 2px solid yellow;" id="phone" maxlength="40" name="phone" size="20" type="text" /><div><br>
 <br>
-<label style="margin-right:15px;" for="subject">Subject</label><input style="border-radius:10px; border: 2px solid yellow;" id="subject" maxlength="80" name="subject" size="20" type="text" /><br>
+<label style="margin-right:15px;" for="subject">Subject</label><div><input style="border-radius:10px; border: 2px solid yellow;" id="subject" maxlength="80" name="subject" size="20" type="text" /><div><br>
 <br>
-<label style="margin-right:15px;" for="description">Description</label><textarea style="border-radius:10px; border: 2px solid yellow;" name="description"></textarea><br>
+<label style="margin-right:15px;" for="description">Description</label><div><textarea style="border-radius:10px; border: 2px solid yellow;" name="description"></textarea><div><br>
 <br>
 <label style="margin-right:15px;" for="priority">Priority</label><select style="border-radius:10px; border: 2px solid yellow; padding: 10px;"  id="priority" name="priority"><option value="">--None--</option><option value="High">High</option>
 <option value="Medium">Medium</option>
